unpackaged/main/default/objects/OrderApi__Price_Rule_Variable__c/OrderApi__Price_Rule_Variable__c.object-meta.xml
<CustomObject>
    <description>Create conditional Price Rules based on a field located on the Account or Contact object.</description>
    <label>Price Rule Variable</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Price Rule Variable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rule Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>