unpackaged/main/default/objects/OrderApi__Price_Rule_Variable__c/fields/OrderApi__Field__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Field__c</fullName>
    <description>**Required** The API Name of the Field used to evaluate for the Price Rule Variable.</description>
    <inlineHelpText>**Required** The API Name of the Field used to evaluate for the Price Rule Variable.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>