unpackaged/main/default/objects/OrderApi__Price_Rule_Variable__c/fields/OrderApi__Operator__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Operator__c</fullName>
    <description>**Required** The operator in a filter is like the verb in a sentence. Use an operator to specify the conditions the Price Rule Variable will use to evaluate whether a Contact or Account matches the condition.</description>
    <inlineHelpText>**Required** The operator in a filter is like the verb in a sentence. Use an operator to specify the conditions the Price Rule Variable will use to evaluate whether a Contact or Account matches the condition.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>equals</label>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>