unpackaged/main/default/objects/OrderApi__Price_Rule_Variable__c/fields/OrderApi__Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Rule__c</fullName>
    <description>**Required** Price Rule Variables hold a Master-Detail relationship to Price Rules.</description>
    <inlineHelpText>**Required** Price Rule Variables hold a Master-Detail relationship to Price Rules.</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>OrderApi__Price_Rule__c</referenceTo>
    <relationshipLabel>Price Rule Variables</relationshipLabel>
    <relationshipName>Price_Rule_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>