unpackaged/main/default/objects/OrderApi__Price_Rule_Variable__c/fields/OrderApi__Value__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Value__c</fullName>
    <description>**Required** The value of the Field to evaluate against the Customer to determine Price availability. (Used in conjunction with Type)</description>
    <inlineHelpText>**Required** The value of the Field to evaluate against the Customer to determine Price availability. (Used in conjunction with Type)</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>